--- a/CSS-Avancado/index.html
+++ b/CSS-Avancado/index.html
@@ -31,7 +31,8 @@
                     </a>
                 </li>
                 <li class="cabecalho__nav_list_item cabecalho__nav_list_item-input">
-                    <input type="search" id="search" placeholder="Oque você procura?" class="cabecalho__nav_list_input">
+                    <input type="search" id="search" placeholder="O que você procura?" class="cabecalho__nav_list_input">
+                    <img src="./assets/icons/search.svg" alt="lupa" class="pesquisa-icon">
                 </li>
                 <li class="cabecalho__nav_list_item">
                     <a href="#" class="cabecalho__nav_list_link cabecalho__nav_list_link-login">Login</a>
