--- a/CSS-Avancado/index.html
+++ b/CSS-Avancado/index.html
@@ -59,29 +59,33 @@
     </section>
 
     <section class="categorias">
-        <h3 class="categorias__titulo">categorias</h3>
-        <p class="categorias__testo">De roupas a gadgets tecnológicos temos tudo para atender suas paixões e hobbies com estilo e autenticidade.</p>
+        <h3 class="categorias__titulo">Categorias</h3>
+        <p class="categorias__texto">De roupas a gadgets tecnológicos temos tudo para atender suas paixões e hobbies com estilo e autenticidade.</p>
         <ul class="categorias__list">
             <li class="categorias__list_item categorias__list_item-roupas">
-                <div class="categorias__list_item-container">
-                    <img src="./assets/roupas.png" alt="Roupas">
+                <div class="categorias__list_item_container">
+                    <img src="./assets/roupas.png" alt="Roupas"/>
                 </div>
-            </li>
+                <h4 class="categorias__list_item_titulo">Roupas</h4>
+            </li> 
             <li class="categorias__list_item categorias__list_item-decoracao">
-                <div class="categorias__list_item-container">
-                    <img src="./assets/decoracao.png" alt="Decoração">
+                <div class="categorias__list_item_container">
+                    <img src="./assets/decoracao.png" alt="Decoração"/>
                 </div>
-            </li>
+                <h4 class="categorias__list_item_titulo">Decoração</h4>
+            </li> 
             <li class="categorias__list_item categorias__list_item-canecas">
-                <div class="categorias__list_item-container">
-                    <img src="./assets/canecas.png" alt="Canecas">
+                <div class="categorias__list_item_container">
+                    <img src="./assets/canecas.png" alt="Canecas"/>
                 </div>
-            </li>
+                <h4 class="categorias__list_item_titulo">Canecas</h4>
+            </li> 
             <li class="categorias__list_item categorias__list_item-acessorios">
-                <div class="categorias__list_item-container">
-                    <img src="./assets/acessorios.png" alt="Acessorios">
+                <div class="categorias__list_item_container">
+                    <img src="./assets/acessorios.png" alt="Acessorios"/>
                 </div>
-            </li>
+                <h4 class="categorias__list_item_titulo">Acessorios</h4>
+            </li> 
         </ul>
     </section>
 </body>
