Seção de produtos

--- a/CSS-Avancado/index.html
+++ b/CSS-Avancado/index.html
@@ -88,5 +88,18 @@
             </li> 
         </ul>
     </section>
+
+    <section class="promocoes">
+        <h3 class="promocoes__titulo">Promos especiais</h3>
+        <ul class="promocoes__list">
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/abridor.png" alt="Abridot de garrafa">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Abridor</h4>
+                    <p>29,90</p>
+                </div>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
