--- a/CSS-Avancado/index.html
+++ b/CSS-Avancado/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -160,7 +160,7 @@
             <h5 class="rodape__coluna_titulo">Funcionamento</h5>
             <ul class="rodape__coluna_list">
                 <li class="rodape__coluna_list_item">
-                    Segunda a Sexta - 8 as 18h
+                    Segunda a Sexta - 8 às 18h
                 </li>
                 <li class="rodape__coluna_list_item">
                     <a class="rodape__coluna_link" href="mailto:sac@usedev.com">
@@ -176,7 +176,7 @@
         </div>
         <div class="rodape__coluna">
             <h5 class="rodape__coluna_titulo">Institucional</h5>
-            <nav class="rodape_coluna_nav">
+            <nav class="rodape__coluna_nav">
                 <ul class="rodape__coluna_list">
                     <li class="rodape__coluna_list_item">
                         <a href="#" class="rodape__coluna_link">Sobre nós</a>
@@ -195,7 +195,7 @@
         </div>
         <div class="rodape__coluna">
             <h5 class="rodape__coluna_titulo">Informações</h5>
-            <nav class="rodape_coluna_nav">
+            <nav class="rodape__coluna_nav">
                 <ul class="rodape__coluna_list">
                     <li class="rodape__coluna_list_item">
                         <a href="#" class="rodape__coluna_link">Entregas</a>
