--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -96,7 +96,28 @@
         </form>
 
         <h2 class="cartaz__titulo">Em cartaz</h2>
-      </div>
+
+        <ul class="filme-list">
+          <li class="filme-list_item">
+            <img src="./images/poster/oNexusDoTempo.png" alt="O nexus do tempo">
+              <div class="filme-list container">
+              <h3 class="filme-list_item-titulo">0 nexus do tempo</h3>
+                          
+              <div class="filme-list_descricao">
+                    <div class="filme-list linha">
+                    <p class="filme-list_descricao-tipo">Suspense</p>
+                    <p class="filme-list_descricao-dimensao">2D</p>
+              </div>
+
+              <div class="filme-list_linha">
+                <p class="filme-list_descricao-duracao">110 minutos</p>
+                <p class="filme-list_descricao-idade">12 anosk/p>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+
     </section>
   </body>
 </html>
