--- a/Seletores-e-Variaveis/index.html
+++ b/Seletores-e-Variaveis/index.html
@@ -270,26 +270,12 @@
         <div class="icones-rodape">
           <p class="body-regular">Acesse nossas redes:</p>
           <div>
-            <img
-              class="icone-rodape"
-              src="./assets/icones/whatsapp.png"
-              alt="Whatsapp"
-            />
-            <img
-              class="icone-rodape"
-              src="./assets/icones/instragam.png"
-              alt="Instagram"
-            />
-            <img
-              class="icone-rodape"
-              src="./assets/icones/tiktok.png"
-              alt="Tiktok"
-            />
+            <img class="icone-rodape" src="./assets/icones/whatsapp.png" alt="Whatsapp" />
+            <img class="icone-rodape" src="./assets/icones/instragam.png" alt="Instagram" />
+            <img class="icone-rodape" src="./assets/icones/tiktok.png" alt="Tiktok" />
           </div>
         </div>
-        <span
-          >Desenvolvido por Alura. Projeto fictício sem fins comerciais.</span
-        >
+        <span>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</span>
       </div>
     </footer>
   </body>
