--- a/javascript-assincrono/index.html
+++ b/javascript-assincrono/index.html
@@ -73,9 +73,9 @@
                 </div>
                 <div>
                         <label for="categoria">Tags</label>
-                        <input type="text" id="categoria" name="categoria" />
-                </div>
-                <ul class="lista-tags">
+                        <input type="text" name="categoria" id="input-tags"/>
+                </div>  
+                <ul class="lista-tags" id="lista-tags">
                         <li>
                                 <p>Front-end</p>
                                 <img src="./img/close-black.svg">
