--- a/alura_books/index.html
+++ b/alura_books/index.html
@@ -275,6 +275,8 @@
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
   <script src="app/main.js"></script>
+  <script src="app/metodoforeach.js"></script>
+  <script src="app/metodomap.js"></script>
 </body>
 
 </html>
