--- a/react-roadmap/BASE/03/index.html
+++ b/react-roadmap/BASE/03/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro site em HTML</title>
+    <title>Tags HTML</title>
 </head>
 <body>
-    <h1>Olá mundo!</h1>
+    <h1>Título nível 1</h1>
+    <h2>Título nível 2</h2>
+    <h3>Título nível 3</h3>
+
+    <p>Esse é um parágrafo de texto em HTML, e não importa como eu escrevo, porque ele sempre vai ser renderizado em uma única linha</p>
+    <p>Esse é um texto em negrito <b>usando uma tag não semântica</b></p>
+    <p><strong>Esse é um texto em negrito</strong> usando uma tag semântica</p>
+    <p>Esse é um texto com ênfase, <i>usando uma tag não semântica</i></p>
+    <p><em>Esse é um texto com ênfase</em>, usando uma tag semântica</p>
+    <p>Minha casa tem 80m<sup>2</sup></p>
+    <p>A composição química da água é H<sub>2</sub>O</p>
 </body>
 </html>
