05 Criando listas e links

--- a/react-roadmap/03/BASE/index.html
+++ b/react-roadmap/03/BASE/index.html
@@ -9,7 +9,7 @@
     <h1>Título nível 1</h1>
     <h2>Título nível 2</h2>
     <h3>Título nível 3</h3>
-
+    <hr>
     <p>Esse é um parágrafo de texto em HTML, e não importa como eu escrevo, porque ele sempre vai ser renderizado em uma única linha</p>
     <p>Esse é um texto em negrito <b>usando uma tag não semântica</b></p>
     <p><strong>Esse é um texto em negrito</strong> usando uma tag semântica</p>
@@ -17,9 +17,43 @@
     <p><em>Esse é um texto com ênfase</em>, usando uma tag semântica</p>
     <p>Minha casa tem 80m<sup>2</sup></p>
     <p>A composição química da água é H<sub>2</sub>O</p>
+
     <hr>
     
-    <img src="img/Paisagem-1.jpg" alt="Bosque com areas verdes e folhas no chão.">
+    <h2>Listas</h2>
+    <p>Lista ordenada</p>
+    <ol type="1" start="5">
+        <li>colocar os ovos na batedeira</li>
+        <li>colocar o chocolate</li>
+        <li>colocar a farinha</li>
+        <li>colocar o açúcar</li>
+        <li>colocar o leite</li>
+    </ol>
+
+    <p>Lista não ordenada</p>
+    <ul type="square">
+        <li>comprar café</li>
+        <li>comprar pão</li>
+        <li>comprar produtos de limpeza
+            <ul type="A">
+                <li>sabão</li>
+                <li>detergente</li>
+                <li>água sanitária</li>
+            </ul>
+        </li>
+    </ul>
+
+    <hr>
+    <h2>links</h2>
+    <a href="http://www.alura.com.br" target="_blank" rel="external">Acesse o site da Alura</a>
+
+    <hr>
+    <!--<img src="img/Paisagem-1.jpg" alt="Paisagem 1">-->
+    <img src="img/Paisagem-2.jpg" alt="Paisagem 2">
+    <img src="img/Paisagem-3.jpg" alt="Paisagem 3">
+    <hr>
     
+
+
 </body>
 </html>
