--- a/Desenvolvimento Front-End React/Nível base - Os fundamentos do Front-End/03 Ambiente, estrutura e estilo/semantica.html/index.html
+++ b/Desenvolvimento Front-End React/Nível base - Os fundamentos do Front-End/03 Ambiente, estrutura e estilo/semantica.html/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de HTML Semântico</title>
+        <title>Pesquisa Culturama</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
         <div class="container">
-            <h1>Explorando HTML Semântico</h1>
+            <h1>Pesquisa Culturama</h1>
             <nav aria-label="Navegação principal">
                 <ul>
                     <li><a href="index.html">Início</a></li>
@@ -25,8 +25,8 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h2>Título da Seção Principal</h2>
-                <p>Esta é uma página de exemplo que mostra como usar tags semânticas: <code>header</code>, <code>nav</code>, <code>main</code>, <code>section</code>, <code>article</code>, <code>aside</code> e <code>footer</code>.</p>
+                <h2>Pesquisa Online</h2>
+                <p>Esta página demonstra o uso de tags semânticas. O formulário de pesquisa está disponível em <a href="../pesquisa-culturama/index.html">pesquisa-culturama</a>.</p>
             </div>
         </section>
 
